--- a/WaveBle/package.json
+++ b/WaveBle/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "base-64": "^1.0.0",
     "expo": "^51.0.0",
     "react": "18.3.1",
     "react-native": "0.75.3",
-    "react-native-ble-plx": "^3.2.1"
+    "react-native-base64": "^0.2.1",
+    "react-native-ble-plx": "^3.2.1",
+    "react-native-permissions": "^4.1.5",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -24,7 +28,9 @@
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
     "@types/react": "^18.2.6",
+    "@types/react-native-base64": "^0.2.2",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/utf8": "^3.0.3",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
