--- a/WaveBle/package.json
+++ b/WaveBle/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.2",
     "base-64": "^1.0.0",
     "expo": "^51.0.0",
     "react": "18.3.1",
