--- a/WaveBle/package.json
+++ b/WaveBle/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "base-64": "^1.0.0",
     "expo": "^51.0.0",
     "react": "18.3.1",
