--- a/WaveBle/package.json
+++ b/WaveBle/package.json
@@ -15,13 +15,18 @@
     "@mui/material": "^6.1.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "base-64": "^1.0.0",
     "expo": "^51.0.0",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.2.1",
+    "react-native-camera": "^4.2.1",
     "react-native-permissions": "^4.1.5",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
