--- a/WaveBle/android/app/build.gradle
+++ b/WaveBle/android/app/build.gradle
@@ -86,6 +86,8 @@ android {
     defaultConfig {
         applicationId "com.waveble"
         minSdkVersion rootProject.ext.minSdkVersion
+        missingDimensionStrategy 'react-native-camera', 'general'
+
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
