--- a/WaveBle/package.json
+++ b/WaveBle/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.75.3",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.2.1",
+    "react-native-camera": "^4.2.1",
     "react-native-permissions": "^4.1.5",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.11.0",
