--- a/WaveBle/package.json
+++ b/WaveBle/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.4.1",
     "base-64": "^1.0.0",
     "expo": "^51.0.0",
+    "framer-motion": "^11.13.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-base64": "^0.2.1",
@@ -28,6 +29,7 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.10.0",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
