--- a/WaveBle/package.json
+++ b/WaveBle/package.json
@@ -27,6 +27,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-permissions": "^4.1.5",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.10.0",
